--- a/readme
+++ b/readme
@@ -1,1 +1,16 @@
-Um mini-game divertido do mario bross. O mario não pode encostar no pipe verde, se não, será game-over e terá de ser jogado novamente.
+<h2> descrição do projeto <h2>
+
+Um mini-game divertido do mario bross. O mario não pode encostar no pipe verde, se não, será game-over e terá de ser jogado novamente.🎮🕹️👾
+
+<h1> Aqui está o projeto </h1>
+aumente o volume! ♬♪
+
+https://github.com/user-attachments/assets/50e35c5c-8ac4-43e9-a318-05f907897909
+
+<h2> Linguagens utilizadas:</h2>
+
+ <li> HTML ✮ </li> 
+ <li> javaScript ★ </li>
+  <li> css ✮ </li>
+
+<h2> Obrigada por visitar o projeto! 👲🏻 🏰  </h2>
